@@ -1,9 +1,12 @@
 package com.tallyto.gestorfinanceiro.core.domain.exceptions;
 
+import java.io.Serial;
+
 /**
  * Exceção lançada quando uma tentativa de excluir uma entidade falha porque ela está sendo referenciada por outras entidades.
  */
 public class EntityInUseException extends RuntimeException {
+    @Serial
     private static final long serialVersionUID = 1L;
 
     public EntityInUseException(String message) {
@@ -11,11 +14,11 @@ public class EntityInUseException extends RuntimeException {
     }
 
     public EntityInUseException(String entidadeNome, Long id) {
-        this(String.format("Não é possível excluir %s com código %d pois está em uso", entidadeNome, id));
+        this("Não é possível excluir %s com código %d pois está em uso".formatted(entidadeNome, id));
     }
 
     public EntityInUseException(String entidadeNome, Long id, String entidadeReferenciadora) {
-        this(String.format("Não é possível excluir %s com código %d pois está sendo utilizado em %s", 
+        this("Não é possível excluir %s com código %d pois está sendo utilizado em %s".formatted(
                 entidadeNome, id, entidadeReferenciadora));
     }
 }
